deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snapfix
  labels:
    name: snapfix
    app: snapfix
